# ECE490

./: .gitignore  ECE490_MP1.ipynb  README.md  pyproject.toml
assignment1/: assignment1.py
lab2_sp2023_files/: asgn_source.py  newtons.py  projected_gd.py
midterm1_notes/: final_notes.tex  use_bigass_paper.tex
uiuc-490-sp23/: __main__.py  pyproject.toml
uiuc-490-sp23/assignment1/: __main__.py
uiuc_490_sp23/Constraints/: __init__.py
uiuc_490_sp23/Problem/: __init__.py
uiuc_490_sp23/assignment2/: __main__.py  projected_gd.py
uiuc_490_sp23/assignment3/: __main__.py
