[tool.poetry]
name = "uiuc-490-sp23"
version = "0.1.0"
description = ""
authors = ["Eric Silk <eric.silk@ericsilk.com>"]
readme = "README.md"
packages = [{include = "uiuc-490-sp23"}]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.24.2"


[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
pylint = "^2.16.1"

[tool.poetry.scripts]
assignment1 = "assignment1:__main__"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
